cangjie-language-server/test/message/completion/LSP_Completion_Range_001.base
{"id":"9","jsonrpc":"2.0","result":[{"deprecated":false,"detail":"public abstract class EnvironmentTangent <: Object","documentation":"","filterText":"EnvironmentTangent","insertText":"EnvironmentTangent","insertTextFormat":1,"kind":7,"label":"EnvironmentTangent","sortText":""},{"deprecated":false,"detail":"public func init()","documentation":"","filterText":"EnvironmentTangent","insertText":"EnvironmentTangent()","insertTextFormat":1,"kind":3,"label":"EnvironmentTangent()","sortText":""},{"deprecated":false,"detail":"public struct Range<T>","documentation":"","filterText":"Range","insertText":"Range<${1:T}>","insertTextFormat":2,"kind":7,"label":"Range<T>","sortText":""},{"deprecated":false,"detail":"public func init(start: T, end: T, step: Int64, hasStart: Bool, hasEnd: Bool, isClosed: Bool)","documentation":"","filterText":"Range<T>","insertText":"Range<${1:T}>(${3:start: T}, ${4:end: T}, ${5:step: Int64}, ${6:hasStart: Bool}, ${7:hasEnd: Bool}, ${8:isClosed: Bool})","insertTextFormat":2,"kind":3,"label":"Range<T>(start: T, end: T, step: Int64, hasStart: Bool, hasEnd: Bool, isClosed: Bool)","sortText":""},{"deprecated":false,"detail":"public class RangeIterator<T> <: Iterator<T>","documentation":"","filterText":"RangeIterator","insertText":"RangeIterator<${1:T}>","insertTextFormat":2,"kind":7,"label":"RangeIterator<T>","sortText":""},{"deprecated":false,"detail":"let range1 = 0..10:1","documentation":"","filterText":"range1","insertText":"range1","insertTextFormat":1,"kind":6,"label":"range1","sortText":""},{"deprecated":false,"detail":"let range10 = 0..=10:0","documentation":"","filterText":"range10","insertText":"range10","insertTextFormat":1,"kind":6,"label":"range10","sortText":""},{"deprecated":false,"detail":"let range11 = 1..10","documentation":"","filterText":"range11","insertText":"range11","insertTextFormat":1,"kind":6,"label":"range11","sortText":""},{"deprecated":false,"detail":"let range12 = 1..=10","documentation":"","filterText":"range12","insertText":"range12","insertTextFormat":1,"kind":6,"label":"range12","sortText":""},{"deprecated":false,"detail":"let range13 = ..10","documentation":"","filterText":"range13","insertText":"range13","insertTextFormat":1,"kind":6,"label":"range13","sortText":""},{"deprecated":false,"detail":"let range14 = 1..     // error: the end value is required.\nlet","documentation":"","filterText":"range14","insertText":"range14","insertTextFormat":1,"kind":6,"label":"range14","sortText":""},{"deprecated":false,"detail":"let range15 = ..      // error: the start and end value are required.\n\nrange","documentation":"","filterText":"range15","insertText":"range15","insertTextFormat":1,"kind":6,"label":"range15","sortText":""},{"deprecated":false,"detail":"let range16: Range<Int64> = 0..10","documentation":"","filterText":"range16","insertText":"range16","insertTextFormat":1,"kind":6,"label":"range16","sortText":""},{"deprecated":false,"detail":"let range17: Range<Int64> = -10..10:2","documentation":"","filterText":"range17","insertText":"range17","insertTextFormat":1,"kind":6,"label":"range17","sortText":""},{"deprecated":false,"detail":"let range18 = 0..=10","documentation":"","filterText":"range18","insertText":"range18","insertTextFormat":1,"kind":6,"label":"range18","sortText":""},{"deprecated":false,"detail":"let range19 = -10..=10:2","documentation":"","filterText":"range19","insertText":"range19","insertTextFormat":1,"kind":6,"label":"range19","sortText":""},{"deprecated":false,"detail":"let range2 = 0..=10:2","documentation":"","filterText":"range2","insertText":"range2","insertTextFormat":1,"kind":6,"label":"range2","sortText":""},{"deprecated":false,"detail":"let range3 = 10..0:-2","documentation":"","filterText":"range3","insertText":"range3","insertTextFormat":1,"kind":6,"label":"range3","sortText":""},{"deprecated":false,"detail":"let range4 = 10..=0:-1","documentation":"","filterText":"range4","insertText":"range4","insertTextFormat":1,"kind":6,"label":"range4","sortText":""},{"deprecated":false,"detail":"let range5 = 10..0:1","documentation":"","filterText":"range5","insertText":"range5","insertTextFormat":1,"kind":6,"label":"range5","sortText":""},{"deprecated":false,"detail":"let range6 = 0..0:1","documentation":"","filterText":"range6","insertText":"range6","insertTextFormat":1,"kind":6,"label":"range6","sortText":""},{"deprecated":false,"detail":"let range7 = 0..=0:1","documentation":"","filterText":"range7","insertText":"range7","insertTextFormat":1,"kind":6,"label":"range7","sortText":""},{"deprecated":false,"detail":"let range8 = 0..=10:-1","documentation":"","filterText":"range8","insertText":"range8","insertTextFormat":1,"kind":6,"label":"range8","sortText":""},{"deprecated":false,"detail":"let range9 = 0..10:0","documentation":"","filterText":"range9","insertText":"range9","insertTextFormat":1,"kind":6,"label":"range9","sortText":""}]}